--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "vue-kanban-server",
+  "name": "champions-lms-server",
   "version": "1.0.0",
-  "description": "The server for vue-kanban",
+  "description": "The server for champions-lms",
   "main": "index.js",
   "scripts": {
     "debug": "node index.js",
     "start": "node index.js",
     "dev": "node index.js"
   },
-  "author": "Jake Overall <joverall22@gmail.com>",
+  "author": "Tyler Rhinehart <rhineart22@gmail.com>",
   "dependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
